# glove

./: .gitignore  Makefile  capture.c  capture_device.c  capture_device.h  highlights.c  highlights.h  highlights_server.c  resolve_points.py  server.c  server.h  track_highlights.c
image_calibrate/: Cargo.toml  Makefile  body_canon_5_mk_iv.json  camera_db.json  camera_nac_4v3a6040.json  camera_nac_4v3a6041.json  camera_nac_4v3a6042.json  located_4v3a6040.json  located_4v3a6041.json  located_4v3a6042.json  nps_noughts_and_crosses.json  pms_nac_4v3a6040.json  pms_nac_4v3a6041.json  pms_nac_4v3a6041_training.json  pms_nac_4v3a6042.json  pms_nac_4v3a6042_training.json  shader.wgsl
image_calibrate/nac/: cam_4v3a6040.json  cam_4v3a6041.json  cam_4v3a6042.json  camera_calibrate_6028.json  camera_nac_4v3a6040.json  camera_nac_4v3a6041.json  camera_nac_canon.json  eng_proj.json  nac2_proj.json  nac_all_proj.json  nps_all.json  nps_base.json
image_calibrate/src/: accel.rs  best_mapping.rs  camera.rs  camera_body.rs  camera_database.rs  camera_instance.rs  camera_lens.rs  camera_mapping.rs  camera_polynomial.rs  camera_polynomial_calibrate.rs  camera_rectilinear.rs  cip.rs  cmdline_args.rs  http.rs  image.rs  json.rs  kernel.rs  lib.rs  mesh.rs  model_data.rs  model_line_set.rs  named_point_set.rs  point_mapping.rs  project.rs  ray.rs  rect_sensor.rs  regions.rs  spherical_lens.rs  thread_pool.rs  traits.rs  types.rs  utils.rs
image_calibrate/src/accel/: accel_wgpu.rs  cpu.rs  shader.wgsl  traits.rs
image_calibrate/src/camera/: best_mapping.rs  camera_body.rs  camera_database.rs  camera_instance.rs  camera_lens.rs  camera_mapping.rs  camera_polynomial.rs  camera_polynomial_calibrate.rs  traits.rs
image_calibrate/src/image/: color.rs  image_gray16.rs  image_image.rs  image_rgb8.rs  patch.rs  regions.rs  traits.rs
image_calibrate/src/kernel/: accel_wgpu.rs  cpu.rs  kernels.rs  shader.wgsl  traits.rs
image_calibrate/src/points/: point_mapping.rs
image_calibrate/tests/: calc_poly.rs  calibrate.rs  camera_rectilinear.rs
photogram/: Cargo.toml  Makefile  Notes.md  shader.wgsl
photogram/camera_calibrate/: Cargo.toml
photogram/camera_calibrate/src/: main.rs
photogram/ic_base/: Cargo.toml
photogram/ic_base/src/: error.rs  json.rs  lib.rs  mesh.rs  path_set.rs  plane.rs  quadtree.rs  ray.rs  types.rs  utils.rs  word_xy.rs
photogram/ic_base/words/: high_frequency_words.txt  word_play.py
photogram/ic_cache/: Cargo.toml
photogram/ic_cache/src/: cache.rs  entry.rs  lib.rs  traits.rs
photogram/ic_cache/tests/: test_cache.rs
photogram/ic_camera/: Cargo.toml
photogram/ic_camera/src/: camera_body.rs  camera_calibrate.rs  camera_database.rs  camera_instance.rs  camera_instance_desc.rs  camera_lens.rs  camera_polynomial.rs  camera_polynomial_calibrate.rs  lib.rs  polynomial.rs  traits.rs  utils.rs
photogram/ic_camera/tests/: test_lens.rs
photogram/ic_cmdline/: Cargo.toml
photogram/ic_cmdline/src/: builder.rs  camera.rs  file_system.rs  image.rs  kernels.rs  lib.rs  mapping.rs  project.rs  threads.rs
photogram/ic_http/: Cargo.toml
photogram/ic_http/src/: lib.rs
photogram/ic_image/: Cargo.toml
photogram/ic_image/src/: color.rs  image_gray16.rs  image_rgb8.rs  lib.rs  patch.rs  regions.rs  traits.rs
photogram/ic_kernel/: Cargo.toml
photogram/ic_kernel/src/: accel_wgpu.rs  cpu.rs  kernel_args.rs  kernels.rs  lib.rs  traits.rs
photogram/ic_mapping/: Cargo.toml
photogram/ic_mapping/src/: lib.rs  mapping.rs  model_line.rs  model_line_set.rs  model_line_subtended.rs  named_point.rs  named_point_set.rs  patch.rs  point_mapping.rs  point_mapping_set.rs
photogram/ic_mesh/: Cargo.toml
photogram/ic_mesh/src/: index_lt.rs  lib.rs  line_index.rs  mesh.rs  point_index.rs  triangle_index.rs
photogram/ic_mesh/tests/: base.rs
photogram/ic_play/: Cargo.toml
photogram/ic_play/src/: calibrate_from_grid.rs  find_stars_from_image.rs  main.rs  model_line_set_loci.rs
photogram/ic_project/: Cargo.toml
photogram/ic_project/src/: cip.rs  lib.rs  project.rs
photogram/ic_stars/: Cargo.toml
photogram/ic_stars/src/: lib.rs  star_mapping.rs
photogram/ic_threads/: Cargo.toml
photogram/image_analyze/: Cargo.toml
photogram/image_analyze/src/: main.rs
photogram/image_calibrate/: Cargo.toml  body_canon_5_mk_iv.json  lens_50mm_rect.json  nps_noughts_and_crosses.json
photogram/image_calibrate/nac/: cam_4v3a6040.json  nps_base.json
photogram/image_calibrate/src/: camera_mapping.rs  lib.rs  main.rs  mesh.rs  points.rs  thread_pool.rs
photogram/image_calibrate/tests/: calc_poly.rs
photogram/image_calibrate_data/: Cargo.toml  lens_50mm_f1_8.json  pms_nac_4v3a6040_training.json  pms_nac_4v3a6041.json  pms_nac_4v3a6041_training.json  pms_nac_4v3a6042.json
photogram/image_calibrate_data/nac/: nac_proj.json
photogram/image_calibrate_data/src/: lib.rs
photogram/image_calibrate_data/tests/: roll_yaw.rs
photogram/image_server/: Cargo.toml
photogram/nac/: cam_4v3a6040.json  cam_4v3a6041.json  cam_4v3a6042.json  camera.json  camera_4924_star_mappings.json  camera_5006_star_mappings.json  camera_6028_mappings.json  camera_6028_start.json  camera_6028_start_linear.json  camera_calibrate_6028.json  camera_calibrate_stars_4924.json  camera_calibrate_stars_5005.json  camera_calibrate_stars_5006.json  camera_db.json  camera_nac_4v3a6040.json  lens_equiangular.json  lens_equisolid.json  lens_linear.json  lens_orthographic.json  lens_stereographic.json  nac_all_proj.json  nps_all.json  nps_base.json  pms_all_4v3a6040.json  pms_all_4v3a6041.json  pms_all_4v3a6042.json
photogram/photogram/: Cargo.toml
photogram/photogram/src/: cip.rs  (+11 more)
photogram/scripts/: cube.bat  cube_image.bat  cube_start.bat  grid_calibrate.bat  lens.py  star_calibrate.bat
photogram/shaders/: extract.json  extract.wgsl  statistical.json  statistical.wgsl
photogram/thunderclap/: Cargo.toml
rust/: Cargo.toml
rust/src/: calibrate.rs  fn_of_fn.rs  functions.rs  lib.rs  power_of.rs  product.rs  sum.rs  traits.rs  value.rs
rust/tests/: calc_poly.rs  calibrate.rs  camera_rectilinear.rs  roll_yaw.rs
(+61 files in other folders)
