[package]
name = "image_calibrate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "thing"
#test = false
#bench = false

[dependencies]
nalgebra = "0.32.1"

[dependencies.serde]
version = "1.0"
features = ["derive", "rc"]

[dependencies.serde_json]
version = "1.0.91"

[dependencies.geo-nd]
# version="0.1.5"
path = "../../geo-nd-rs"

[dependencies.clap]
version = "4.1.4"