[package]
name = "image_calibrate"
version = "0.1.0"
edition = "2021"
description = "Image analysis and photogrammetry\n"
homepage = "https://github.com/atthecodeface/image_calibrate"
documentation = "https://docs.rs/image_calibrate"
keywords = ["geometry"]
categories = ["graphics"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atthecodeface/image_calibrate"

[[bin]]
name = "image_calibrate"

[[bin]]
name = "camera_calibrate"

[[bin]]
name = "image_analyze"

[dependencies]
nalgebra = "0.32.1"
image = "0.25"
plotters = "0.3.3"

[dependencies.serde]
version = "1.0"
features = ["derive", "rc"]

[dependencies.serde_json]
version = "1.0.91"

[dependencies.geo-nd]
version="0.5"
# path = "../../geo-nd-rs"

[dependencies.clap]
version = "4.5.2"
features = ["string"]

