[workspace]
resolver = "2"
members = [ "ic_base","image_calibrate", "image_server"]
exclude = []
default-members = ["ic_base","image_calibrate", "image_server"]

[workspace.package]
edition = "2021"
version = "0.1.0"
description = "Image analysis and photogrammetry\n"
homepage = "https://github.com/atthecodeface/image_calibrate"
documentation = "https://docs.rs/image_calibrate"
keywords = ["geometry"]
categories = ["graphics"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atthecodeface/image_calibrate"

[workspace.dependencies]
image_calibrate = { version = "0.1.0", path = "./image_calibrate" }
ic_base = { version = "0.1.0", path = "./ic_base" }

nalgebra = "0.32.1"
plotters = "0.3.3"

[workspace.dependencies.bytemuck]
version = ">=1.15.0"
features = ["derive"]

[workspace.dependencies.wgpu]
version = ">=0.19"

[workspace.dependencies.image]
version = "0.25"
features = ["png"]

[workspace.dependencies.serde]
version = "1.0"
features = ["derive", "rc"]

[workspace.dependencies.serde_json]
version = "1.0.91"

[workspace.dependencies.geo-nd]
version = ">0.5.0"
path = "../../geo-nd-rs"

[workspace.dependencies.clap]
version = "4.5.2"
features = ["string"]

