[workspace]
resolver = "2"
members = [ "photogram", "ic_base", "ic_cache", "ic_camera", "ic_cmdline", "ic_http", "ic_image", "ic_kernel", "ic_mapping", "ic_mesh", "ic_project", "ic_stars", "ic_threads", "image_server", "ic_play", "thunderclap"]

[workspace.package]
edition = "2024"
version = "0.1.0"
description = "Image analysis and photogrammetry\n"
homepage = "https://github.com/atthecodeface/image_calibrate"
documentation = "https://docs.rs/image_calibrate"
keywords = ["geometry"]
categories = ["graphics"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atthecodeface/image_calibrate"

[workspace.dependencies]
ic_base = { version = "0.1.0", path = "./ic_base" }
ic_cache = { version = "0.1.0", path = "./ic_cache" }
ic_camera = { version = "0.1.0", path = "./ic_camera" }
ic_cmdline = { version = "0.1.0", path = "./ic_cmdline" }
ic_http = { version = "0.1.0", path = "./ic_http" }
ic_image = { version = "0.1.0", path = "./ic_image" }
ic_kernel = { version = "0.1.0", path = "./ic_kernel" }
ic_mapping = { version = "0.1.0", path = "./ic_mapping" }
ic_mesh = { version = "0.1.0", path = "./ic_mesh" }
ic_project = { version = "0.1.0", path = "./ic_project" }
ic_stars = { version = "0.1.0", path = "./ic_stars" }
ic_threads = { version = "0.1.0", path = "./ic_threads" }
ic_play = { version = "0.1.0", path = "./ic_play" }
thunderclap = { version = "0.1.0", path = "./thunderclap" }

nalgebra = "0.32.1"
plotters = "0.3.3"

[workspace.dependencies.poloto]
version = "19.1.2"

[workspace.dependencies.tagu]
version = "0.1.3"

[workspace.dependencies.regex]
version = "1.11"

[workspace.dependencies.postcard]
version = "1.0"
features = ["alloc"]

[workspace.dependencies.star-catalog]
version = "0.1"
features = ["postcard", "hipp_bright", "image"]
# path = "../../star-catalog-rs"

[workspace.dependencies.bytemuck]
version = ">=1.15.0"
features = ["derive"]

[workspace.dependencies.thiserror]
version = "2.0"

[workspace.dependencies.anyhow]
version = "1.0.98"

[workspace.dependencies.wgpu]
version = "=0.20"

[workspace.dependencies.image]
version = "0.25"
features = ["png"]

[workspace.dependencies.serde]
version = "1.0"
features = ["derive", "rc"]

[workspace.dependencies.serde_json]
version = "1.0.91"

[workspace.dependencies.geo-nd]
version = "0.6"
# path = "../../geo-nd-rs"

[workspace.dependencies.clap]
version = "4.5.2"
features = ["string"]

