[package]
name = "glove"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.32.1"

[dependencies.serde]
version = "1.0"
features = ["derive", "rc"]

[dependencies.toml]
version = "0.7.1"
features = ["parse", "preserve_order"]

[dependencies.geo-nd]
# version="0.1.5"
path = "../../geo-nd-rs"

