[package]
name = "ic_cmdline"
edition.workspace = true
version.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
star-catalog.workspace = true

thunderclap.workspace = true
ic_base.workspace = true
ic_stars.workspace = true
ic_camera.workspace = true
ic_image.workspace = true
ic_kernel.workspace = true
ic_mapping.workspace = true
ic_project.workspace = true
