[package]
name = "ic_image"
edition.workspace = true
version.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
image.workspace = true
serde.workspace = true
geo-nd.workspace = true

ic_base.workspace = true
