[package]
name = "ic_play"
edition.workspace = true
version.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ic_base.workspace = true
ic_image.workspace = true
ic_camera.workspace = true
ic_mapping.workspace = true
ic_cmdline.workspace = true
geo-nd.workspace = true
poloto.workspace = true
serde.workspace = true
postcard.workspace = true
star-catalog.workspace = true
clap.workspace = true
anyhow.workspace = true

[[bin]]
name="ic_play"
path = "src/main.rs"


[[bin]]
name="find_stars_from_image"
path = "src/find_stars_from_image.rs"

[[bin]]
name="calibrate_from_grid"
path = "src/calibrate_from_grid.rs"

[[bin]]
name="mls_loci"
path = "src/model_line_set_loci.rs"
