[package]
name = "ic_stars"
edition.workspace = true
version.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ic_base.workspace = true
ic_image.workspace = true
ic_camera.workspace = true
ic_mapping.workspace = true
ic_cmdline.workspace = true
geo-nd.workspace = true
poloto.workspace = true
serde.workspace = true
postcard.workspace = true
star-catalog.workspace = true
serde_json.workspace = true

