[package]
name = "image_analyze"
edition.workspace = true
version.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra.workspace = true
plotters.workspace = true
thunderclap.workspace = true

bytemuck.workspace = true
wgpu.workspace = true
serde.workspace = true
serde_json.workspace = true
geo-nd.workspace = true
clap.workspace = true

ic_base.workspace = true
ic_camera.workspace = true
ic_cmdline.workspace = true
ic_image.workspace = true
ic_kernel.workspace = true
ic_mapping.workspace = true
