[package]
name = "image_calibrate"
version.workspace = true
# authors.workspace = true
edition.workspace = true
description = "Image analysis and photogrammetry"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
nalgebra.workspace = true
plotters.workspace = true

bytemuck.workspace = true
wgpu.workspace = true
serde.workspace = true
serde_json.workspace = true
geo-nd.workspace = true
clap.workspace = true

ic_base.workspace = true
ic_camera.workspace = true
ic_image.workspace = true
ic_kernel.workspace = true
ic_mapping.workspace = true
ic_project.workspace = true
