[package]
name = "image_server"
edition.workspace = true
version.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
geo-nd.workspace = true
clap.workspace = true

image_calibrate.workspace = true
ic_base.workspace = true
ic_image.workspace = true
