[package]
name = "image_server"
edition.workspace = true
version.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
geo-nd.workspace = true
clap.workspace = true

ic_base.workspace = true
ic_cache.workspace = true
ic_cmdline.workspace = true
ic_http.workspace = true
ic_image.workspace = true
ic_kernel.workspace = true
ic_threads.workspace = true
ic_project.workspace = true
